sumo/tests/duarouter/alternatives/style1_input/errors/vehicle/vehicle_route_empty/errors.duarouter
Error: Attribute 'route' in definition of a vehicle is empty.
Error: The route of the vehicle '1' is not known.
Quitting (on error).
